--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,3 +3,9 @@
 <h5>Time: <%= @recipe.prep_time %></h5>
 <h3>Ingredients: <%= @recipe.ingredients %></h3>
 <h3>Direction: <%= @recipe.directions %></h3>
+
+<%= link_to 'Home', '/recipes' %>
+<br>
+<%= link_to 'Edit', "/recipes/#{@recipe.id}/edit" %>
+<br>
+<%= link_to 'Delete', "/recipes/#{@recipe.id}", method: :delete %>
