--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -6,3 +6,12 @@ body {
   font-family: "Book Antiqua",Palatino,"Palatino Linotype","Palatino LT STD",Georgia,serif;
   background-image: url('purty_wood.png');
 }
+
+h2 a {
+  color: #060;
+}
+
+.index-list {
+  height: 750px;
+  background-color: rgba(150,50,0,0.3);
+}
