--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,20 +1,22 @@
 
-<div class="row">
-  <% @recipes.each do |recipe| %>
-    <div class="col-md-4">
-      <div class="well thumbnail index-list">
-        <h2><%= link_to recipe.title, "/recipes/#{recipe.id}" %></h2>
-        <h3>By: <%= recipe.chef %></h3>
-        <h5>Time: <%= recipe.prep_time %></h5>
-        <a href="/recipes/<%= recipe.id %>">
-          <img src="<%= recipe.image %>" alt="<%= recipe.title %>">
-        </a>
-        <h3>Ingredients: <%= recipe.ingredients %></h3>
-        <h3>Direction: <%= recipe.directions %></h3>
-      </div>
+  <% @recipes.each_slice(3) do |recipe_row| %>
+    <div class="row">
+      <% recipe_row.each do |recipe| %>
+        <div class="col-md-4">
+          <div class="well thumbnail index-list">
+            <h2><%= link_to recipe.title, "/recipes/#{recipe.id}" %></h2>
+            <h3>By: <%= recipe.chef %></h3>
+            <h5>Time: <%= recipe.prep_time %></h5>
+            <a href="/recipes/<%= recipe.id %>">
+              <img src="<%= recipe.image %>" alt="<%= recipe.title %>">
+            </a>
+            <h3>Ingredients: <%= recipe.ingredients %></h3>
+            <h3>Direction: <%= recipe.directions %></h3>
+          </div>
+        </div>
+      <% end %>
     </div>
   <% end %>
-</div>
 
 <!-- <div class="row">
 
