--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -5,13 +5,24 @@
         <div class="col-md-4">
           <div class="well thumbnail index-list">
             <h2><%= link_to recipe.title, "/recipes/#{recipe.id}" %></h2>
+            <h6>Updated On: <%= recipe.friendly_updated_at %></h6>
             <h3>By: <%= recipe.chef %></h3>
-            <h5>Time: <%= recipe.prep_time %></h5>
+            <h5>Time: <%= recipe.friendly_prep_time %></h5>
             <a href="/recipes/<%= recipe.id %>">
               <img src="<%= recipe.image %>" alt="<%= recipe.title %>">
             </a>
-            <h3>Ingredients: <%= recipe.ingredients %></h3>
-            <h3>Direction: <%= recipe.directions %></h3>
+            <h3>Ingredients: </h3>
+            <ul>
+              <% recipe.ingredients_list.each do |ingredient| %>
+                <li><%= ingredient %></li>
+              <% end %>
+            </ul>
+            <h3>Direction: </h3>
+            <ol>
+              <% recipe.directions_list.each do |direction| %>
+                <li><%= direction %></li>
+              <% end %>
+            </ol>
           </div>
         </div>
       <% end %>
