--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,9 @@
                 <li><a href="/recipes?sort=title">Sort by Title</a></li>
                 <li><a href="#">Something else here</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
+                <li><a href="/signup">Sign Up</a></li>
+                <li><a href="/login">Log In</a></li>
+                <li><%= link_to 'Log Out', '/logout', method: :delete %></li>
               </ul>
             </li>
           </ul>
