--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/recipes">Crockpot Master</a>
+          <% if current_user %>
+            <a class="navbar-brand">Welcome <%= current_user.name.titleize %>!</a>
+          <% end %>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -43,9 +46,14 @@
                 <li><a href="/recipes?sort=title">Sort by Title</a></li>
                 <li><a href="#">Something else here</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="/signup">Sign Up</a></li>
-                <li><a href="/login">Log In</a></li>
-                <li><%= link_to 'Log Out', '/logout', method: :delete %></li>
+
+                <% if current_user %>
+                  <li><%= link_to 'Log Out', '/logout', method: :delete %></li>
+                <% else %>
+                  <li><a href="/signup">Sign Up</a></li>
+                  <li><a href="/login">Log In</a></li>
+                <% end %>
+                
               </ul>
             </li>
           </ul>
